# CSE260BoneProjectMaterial

./: .gitignore  README.md
web/: Justfile  pyproject.toml  test_picture.py  test_scan.py
web/core_alg/utilities/: bone_region_util.py  results_anlysis.py
