[project]
name = "bone-project-material"
version = "0.1.0"
requires-python = ">=3.9,<3.10"
dependencies = [
    "alphashape==1.3.1",
    "descartes==1.1.0",
    "numpy==1.21.6,<2.0",
    "open3d==0.14.1",
    "pandas==1.1.5",
    "pywavefront==1.3.2",
    "scikit-learn==1.6.1",
    "shapely>=1.0,<2.0",
]
